--- a/templates/qrCode.html
+++ b/templates/qrCode.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Big Fat Festival</title>
+    <title>BigFatFestival</title>
 </head>
 
 <body>
-    <h1>Ticket Information</h1>
+    <h1>BigFatFestival Ticket Information</h1>
     <h2>Name</h2>
     <h3>{{ name }}</h3>
     <h2>Email</h2>
